--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/306/306470.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List</title>
+    <title>Hanan's To-Do List</title>
   </head>
   <body>
     <div id="root"></div>
